Multiple fixes - Fixed issue with fetching user services (need to compare reference of user in DB). Added spinner to ReceivedOffers and SentOffers pages and fixed spinner not showing immediately on page loads

--- a/src/styles/collaborations.scss
+++ b/src/styles/collaborations.scss
@@ -2,6 +2,7 @@
   font-size: 34px;
   font-weight: bold;
   margin-right: 20px;
+  min-width: 180px;
 }
 
 .root {
